# mindone

./: .flake8  .gitignore  .hatch_metadata_hooks.py  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  auto_convert.py  awesome_vision.md  diff.patch  mkdocs.yml  pyproject.toml  setup.py  subreadme.md  versions.json
examples/janus/: README.md  generation_inference.py  inference.py  inference_pure_text.py  interactivechat.py  pyproject.toml  requirements.txt  run_vqa.py  train.py  train_pure_text.py  vqa_inference.py
examples/janus/data_demo/jade/csvfile/: image_text_en.csv
examples/janus/data_demo/porcelain/csvfile/: image_text_en.csv
examples/janus/demo/: app_januspro.py
examples/janus/docs/: training.md
examples/janus/janus/models/: clip_encoder.py  compat.py  image_processing_vlm.py  modeling_vlm.py  processing_vlm.py  projector.py  siglip_vit.py  vq_model.py
examples/janus/janus/models/timm/: __init__.py  modules.py
examples/janus/janus/train/: lr_schedule.py  t2i_dataset.py  text_dataset.py  unified_dataset.py  unified_dataset_weightedrandsamp.py  utils.py  vqa_dataset.py
examples/janus/janus/utils/: conversation.py  io.py
examples/janus/models/: modeling_vlm.py  siglip_vit.py
examples/janus/models/timm/: __init__.py  modules.py
examples/janus/scripts/: run_eval_t2i.sh  run_sft_mixed.sh  run_sft_mixed_graph.sh  run_sft_mixed_pynative.sh  run_sft_t2i.sh  run_sft_text.sh  run_sft_vqa.sh
examples/janus/tests/: compare.py  test_chat_proc.py  test_dataset.py  test_multinomial.py  test_pt.py  test_siglip.py  test_toy_data.py  test_vit_block.py  test_vq.py  utils.py
examples/janus/tests/test_dataloader/: meta_data.jsonl  test_dataloader.py
examples/janus/tests/test_dataloader/multimodal_understanding_dataset/: annotation.jsonl
examples/janus/tests/test_dataloader/pure_text_dataset/: annotation.jsonl
examples/janus/tests/test_dataloader/text_to_image_dataset/: annotation.jsonl
foropenmind0120/janus/mindone/: .flake8  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
foropenmind0120/janus/mindone/docs/diffusers/api/: outputs.md
foropenmind0120/janus/mindone/docs/diffusers/training/: lora.md  unconditional_training.md
foropenmind0120/janus/mindone/docs/diffusers/tutorials/: autopipeline.md  using_peft_for_inference.md
foropenmind0120/janus/mindone/docs/diffusers/using-diffusers/: controlling_generation.md  ip_adapter.md  kandinsky.md  loading_overview.md  merge_loras.md  scheduler_features.md  sdxl.md  svd.md  t2i_adapter.md  textual_inversion_inference.md
foropenmind0120/janus/mindone/docs/peft/: index.md
foropenmind0120/janus/mindone/docs/transformers/: _toctree.yml  index.md
foropenmind0120/janus/mindone/examples/animatediff/scripts/: download_demo_images.sh  run_mmv2_finetune_512.sh  run_mmv2_lora_finetune_512_webvid10k.sh  run_mmv2_lora_finetune_910b.sh  run_mmv2_train_512_webvid10k.sh  run_mmv2_train_gpu.sh
foropenmind0120/janus/mindone/examples/animatediff/tests/: test_data.py  test_save_video.py
foropenmind0120/janus/mindone/examples/animatediff/tools/: extract_param_info.py  motion_lora_convert.py  torch_mmv1_params.txt
foropenmind0120/janus/mindone/examples/diffusers/: README.md
foropenmind0120/janus/mindone/examples/diffusers/controlnet/: train_controlnet.py  train_controlnet_sdxl.py
foropenmind0120/janus/mindone/examples/diffusers/dreambooth/: README.md
foropenmind0120/janus/mindone/examples/diffusers/text_to_image/: README.md  train_text_to_image.py  train_text_to_image_lora.py  train_text_to_image_lora_sdxl.py  train_text_to_image_sdxl.py
foropenmind0120/janus/mindone/examples/diffusers/unconditional_image_generation/: train_unconditional.py
foropenmind0120/janus/mindone/examples/dit/: README.md  README_CN.md
foropenmind0120/janus/mindone/examples/dit/data/: imagenet_dataset.py
foropenmind0120/janus/mindone/examples/dit/diffusion/: diffusion_utils.py  gaussian_diffusion.py
foropenmind0120/janus/mindone/examples/dit/tools/: dit_converter.py
foropenmind0120/janus/mindone/examples/dit_infer_acceleration/tests/: sd3_accuracy_test.py
foropenmind0120/janus/mindone/examples/dynamicrafter/: .gitignore
foropenmind0120/janus/mindone/examples/dynamicrafter/configs/: inference_512_v1.0.yaml
foropenmind0120/janus/mindone/examples/fit/: args_train.py  preprocess.py
foropenmind0120/janus/mindone/examples/hunyuan3d_1/: README.md  main.py
foropenmind0120/janus/mindone/examples/instantmesh/: README.md  requirements.txt  run.sh  train.py
foropenmind0120/janus/mindone/examples/ip_adapter/: controlnet_sd.py  requirement.txt
foropenmind0120/janus/mindone/examples/janus/: README.md  requirements.txt
foropenmind0120/janus/mindone/examples/latte/: requirements.txt  train.py
foropenmind0120/janus/mindone/examples/mvdream/: README.md
foropenmind0120/janus/mindone/examples/opensora_pku/: README.md
foropenmind0120/janus/mindone/examples/pangu_draw_v3/: README_CN.md
foropenmind0120/janus/mindone/examples/pixart_sigma/: train.py
foropenmind0120/janus/mindone/examples/stable_diffusion_v2/: controlnet_image2image.py  text_to_image.py  train_cldm.py
foropenmind0120/janus/mindone/examples/stable_diffusion_xl/: train.py
foropenmind0120/janus/mindone/examples/svd/: requirements.txt  train.py  utils.py
foropenmind0120/janus/mindone/examples/text2video_zero/: README.md  infer.py  requirements.txt
foropenmind0120/janus/mindone/examples/venhancer/: inference.py  inference_utils.py  requirements.txt
foropenmind0120/janus/mindone/examples/videocomposer/: .gitignore  convert_lite.py
foropenmind0120/janus/mindone/mindone/data/: dataset.py  loader.py
foropenmind0120/janus/mindone/mindone/diffusers/: __init__.py  optimization.py
foropenmind0120/janus/mindone/mindone/trainers/: __init__.py  lr_schedule.py  optim.py
foropenmind0120/janus/mindone/mindone/transformers/: modeling_outputs.py  training_args.py
foropenmind0120/janus/mindone/mindone/utils/: amp.py
foropenmind0120/janus/mindone/scripts/: eval_videos_metrics.py
(+8811 files in other folders)
